[Fix] Improve save button height alignment with text input
- Removed inline styles that conflicted with CSS
- Set saveSection to flex-direction: column with justify-content: flex-end
- Adjusted button padding to 0.825em top/bottom to match input height
- Button now properly aligns with template name field

--- a/TemplateWizard/css/template_designer.css
+++ b/TemplateWizard/css/template_designer.css
@@ -51,6 +51,8 @@
 
 #saveSection {
 	display: none;
+	flex-direction: column;
+	justify-content: flex-end;
 }
 
 #templateNameSection {
@@ -58,6 +60,7 @@
 }
 
 #saveBtn {
-	height: 100%;
-	min-height: 2.75em;
+	width: 100%;
+	padding-top: 0.825em;
+	padding-bottom: 0.825em;
 }
